# gpu_procurement_lab

./: .geminiignore  .gitignore  FIX_GDRIVE_AUTH.md  GDRIVE_SETUP.md  LICENSE  Makefile  README.md  TOPOLOGY.md  api_logs.txt  main.py  pyproject.toml  requirements.txt  run_demo.sh  run_mock_api_server.sh  run_phase1_demo.sh  run_phase2_demo.sh
assets/: generate_assets.py  setup_db.py  setup_gcs.py
assets/mock_api/: Dockerfile  main.py
assets/sql/: legacy_inv_main_v2.sql  ref_catalog_dump.sql  schema.sql
assets/utils/: config.py  gdrive_integration.py
gdrive_sync/: Executive_Report_H100_Procurement.md  H100_Procurement_Report.md
infra/: apis.tf  base_env_tpl.sh  env.tf  gcs.tf  main.tf  provider.tf  variables.tf
labs/phase1/: Makefile  main.py  pyproject.toml  requirements.txt
labs/phase1/src/agents/commander/: agent.py
labs/phase1/src/agents/gdrive_sync/: Executive_Report_H100_Procurement.md
labs/phase1/src/agents/inventory/: agent.py
labs/phase1/src/agents/legal/: agent.py
labs/phase1/src/agents/logistics/: agent.py
labs/phase1/src/agents/purchase_order/: agent.py
labs/phase1/src/tools/: api.py  contract_analyzer.py  database.py  file_system.py  rag.py
labs/phase1/src/utils/: config.py  gdrive_integration.py
labs/phase1/tests/: golden_set.py
labs/phase2/: main.py  pyproject.toml
labs/phase2/src/agents/: __init__.py
labs/phase2/src/agents/commander/: agent.py
labs/phase2/src/agents/inventory/: agent.py
labs/phase2/src/agents/legal/: agent.py
labs/phase2/src/agents/logistics/: agent.py
labs/phase2/src/agents/source_gpus/: agent.py
labs/phase2/src/tools/: api.py  database.py  file_system.py  rag.py
labs/phase2/src/utils/: config.py
labs/phase2/tests/: golden_set.py
scripts/: run_hydrate_infra.sh  run_mock_api_server.sh  run_phase.sh  run_phase1_demo.sh  run_phase2_demo.sh  test_phase.sh
src/agents/: base.py
src/agents/commander/: agent.py
src/agents/inventory/: agent.py
src/agents/legal/: agent.py
src/agents/logistics/: agent.py
src/agents/workspace/: procurement_tracker.csv
src/tools/: rag.py
src/utils/: config.py  gdrive_integration.py
workspace/: procurement_tracker.csv
